📦 NEW: Ejemplos de utility first

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <h1>Hello World</h1>
+    <h1 class="bg-yellow-500 text-white">Hello World</h1>
+    <input
+      class="border-2 border-blue-500 placeholder-green-500"
+      type="text"
+      placeholder="Lorem ipsum"
+    />
   </body>
 </html>
