📦 NEW: Clase #4 - Utilirias

--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,12 @@
     <title>Inicio</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body>
-    <h1 class="bg-yellow-500 text-white">Hello World</h1>
+  <body class="mx-4">
+    <h1 class="h-32 w-1/5 mx-auto my-8 bg-yellow-500 text-white">
+      Hello World
+    </h1>
     <input
-      class="border-2 border-blue-500 placeholder-green-500"
+      class="py-1 px-4 border-2 border-blue-500 placeholder-green-500"
       type="text"
       placeholder="Lorem ipsum"
     />
