📦 NEW: Creando header

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
       <div>
         <img
           class="rounded-lg md:w-full"
-          src="img/hamburger.jpg"
+          src="images/hamburger.jpg"
           alt="hamburger"
         />
       </div>
